GTK3: fix whishkermenu not showing selected row

--- a/share/themes/Kali-Light/gtk-3.0/gtk-dark.css
+++ b/share/themes/Kali-Light/gtk-3.0/gtk-dark.css
@@ -5249,7 +5249,7 @@ filechooser placessidebar.sidebar,
   padding: 0 5px;
   background: #23252e;
   border-left: 1px solid #0d0e11; }
-  #whiskermenu-window scrolledwindow treeview:hover {
+  #whiskermenu-window scrolledwindow treeview:hover, #whiskermenu-window scrolledwindow treeview:active, #whiskermenu-window scrolledwindow treeview:selected {
     background-color: rgba(0, 0, 0, 0.27);
     color: inherit; }
 
