--- a/share/themes/Kali-Light/gtk-3.0/gtk.css
+++ b/share/themes/Kali-Light/gtk-3.0/gtk.css
@@ -5270,7 +5270,7 @@ filechooser placessidebar.sidebar,
   padding: 0 5px;
   background: #ffffff;
   border-left: 1px solid #d9d9d9; }
-  #whiskermenu-window scrolledwindow treeview:hover {
+  #whiskermenu-window scrolledwindow treeview:hover, #whiskermenu-window scrolledwindow treeview:active, #whiskermenu-window scrolledwindow treeview:selected {
     background-color: rgba(0, 0, 0, 0.07);
     color: inherit; }
 
